--- a/SnapPea/Info.plist
+++ b/SnapPea/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>SnapPea needs camera access to take photos of your garden</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>SnapPea needs photo library access to select photos of your garden</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -56,9 +60,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSCameraUsageDescription</key>
-	<string>VeggieTag needs camera access to take photos of your garden</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>VeggieTag needs photo library access to select photos of your garden</string>
 </dict>
 </plist>
