--- a/Snappy/Resources/GoogleService-Info-dev.plist
+++ b/Snappy/Resources/GoogleService-Info-dev.plist
@@ -13,21 +13,21 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>io.renderapps.SnapPea</string>
+	<string>io.renderapps.Snappy</string>
 	<key>PROJECT_ID</key>
 	<string>veggietag-dev</string>
 	<key>STORAGE_BUCKET</key>
 	<string>veggietag-dev.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:793627752936:ios:7da3b4a257be1eb1588c5d</string>
 	<key>DATABASE_URL</key>
