--- a/Snappy/Resources/GoogleService-Info-dev.plist
+++ b/Snappy/Resources/GoogleService-Info-dev.plist
@@ -2,35 +2,29 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CLIENT_ID</key>
-	<string>793627752936-55ur34ii86ron8puq5f7hr9psqk71b8t.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.793627752936-55ur34ii86ron8puq5f7hr9psqk71b8t</string>
 	<key>API_KEY</key>
-	<string>AIzaSyCy8hFtY-sp8QEfeu3TCqMR930-5KXYtNg</string>
+	<string>AIzaSyC6hP-zwKX9zatVIJ-4qaKH6-Baqd7Xtmg</string>
 	<key>GCM_SENDER_ID</key>
-	<string>793627752936</string>
+	<string>363544954898</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>io.renderapps.Snappy</string>
+	<string>io.renderapps.snappy</string>
 	<key>PROJECT_ID</key>
-	<string>veggietag-dev</string>
+	<string>snappy-3b045</string>
 	<key>STORAGE_BUCKET</key>
-	<string>veggietag-dev.appspot.com</string>
+	<string>snappy-3b045.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:793627752936:ios:7da3b4a257be1eb1588c5d</string>
-	<key>DATABASE_URL</key>
-	<string>https://veggietag-dev.firebaseio.com</string>
+	<string>1:363544954898:ios:10b3f0181183449e4130cb</string>
 </dict>
 </plist>
